# interactive-gltf-engine

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  GETTING_STARTED.md  README.md  ROADMAP.md  SECURITY.md
docs/: README.md  configuration.md  interaction-runtime.md  (+4 more)
igltf-editor-backend/: .env.example  .gitignore  README.md  package-lock.json  package.json  pyproject.toml  run-back.bat
igltf-editor-backend/app/: __init__.py  apply_document.py  assets_disk_sync.py  assets_watch.py  authoring_kit_fs.py  build_play_glb.py  build_scene_js.py  cursor_project_rules.py  editor_session.py  gltf_interior_hierarchy.py  gltf_merge.py  igltf_umi3d_proto.py  interactive_gltf_ext.py  main.py  mcp_best_practices.py  mcp_project_config.py  mcp_scene_tools.py  mcp_server.py  models.py  open_ide.py  project_fs_lock.py  project_identity.py  projects_registry.py  script_asset_naming.py  script_input_schema.py  storage.py  transform_audit.py  transform_conversion.py  version_info.py
igltf-editor-backend/authoring_kit/: README.md
igltf-editor-backend/authoring_kit/js/: interaction-bases.js
igltf-editor-backend/authoring_kit/md/: host-api.md  script-authoring.md  script-inputs-mcp.md  transform-authoring.md
igltf-editor-backend/docs/: gltf-interior-editing-limits.md  umi3d-proto-extension-alignment.md
igltf-editor-backend/scripts/: igltf-backend.spec  igltf_backend_entry.py  temp_verify_build_test_scene.py  temp_verify_test4_wheel_animations.py
igltf-editor-backend/tests/: __init__.py  conftest.py  test_app_health.py  test_assets_disk_sync.py  test_authoring_kit_fs.py  test_build_scene_js_topo.py  test_cursor_project_rules.py  test_editor_session.py  test_gltf_interior_manifest.py  test_igltf_umi3d_proto.py  test_mcp_project_config.py  test_mcp_script_inputs.py  test_play_manifest_cache.py  test_project_identity_mcp.py  test_rename_script_stem.py  test_script_asset_naming.py  test_script_input_schema.py  test_transform_audit.py  test_transform_conversion.py
igltf-editor-frontend/src-tauri/: Cargo.toml  tauri.conf.json
igltf-editor-frontend/src-tauri/icons/: icon.icns
igltf-editor-frontend/src-tauri/src/: lib.rs  main.rs
(+134 files in other folders)
