[project]
name = "igltf-editor-backend"
version = "0.1.0"
description = "FastAPI service: project.json + assets for igltf-editor-frontend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0,<1",
    "python-dotenv>=1.0.0,<2",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.32.0,<1",
    "pydantic>=2.9.0,<3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
