[project]
name = "igltf-editor-backend"
version = "0.1.0"
description = "FastAPI service: project.json + assets for igltf-editor-frontend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0,<1",
    "python-dotenv>=1.0.0,<2",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.32.0,<1",
    "pydantic>=2.9.0,<3",
    "pygltflib>=1.16.5",
    "mcp>=1.13.0",
    "watchfiles>=1.0,<2",
]

[project.optional-dependencies]
packaging = [
    "pyinstaller>=6.6,<8",
]
dev = [
    "httpx>=0.27,<1",
    "pytest>=8.0,<10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.build.targets.wheel.force-include]
"authoring_kit" = "authoring_kit"
